--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Analysis</title>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/plot.js"></script>
+    <style>
+      html,
+      body {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
-  <body>
-    Hello vite
-  </body>
+  <body></body>
 </html>
