Remape expression ratings to 1-5 integers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Analysis</title>
     <script type="module" src="./src/plot.js"></script>
+    <script type="module" src="./src/cleanup.js"></script>
     <style>
       html,
       body {
