--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Data Analysis</title>
-  <script type="module" src="./src/plot_error_overview.js"></script>
+  <script type="module" src="./src/plot_absolute_error.js"></script>
+  <!-- <script type="module" src="./src/plot_error_overview.js"></script> -->
   <!-- <script type="module" src="./src/cleanup.js"></script> -->
   <style>
     html,
